Awesomeness is coming.

--- a/p1/index.html
+++ b/p1/index.html
@@ -2,107 +2,118 @@
 <!-- vim: set noai ts=4 sw=4: -->
 <html>
 	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<title>BetaBet</title>
 		<link rel="stylesheet" type="text/css" href="theme.css">
 	</head>
 	<body>
-		<div id="header">
-			BetaBet
-		</div>
-		<div id="profile">
-			Profile
-		</div>
+		<a href="index.html">
+			<div id="header">
+				BetaBet
+			</div>
+		</a>
+		<a href="account.html">
+			<div id="account">
+				<img src="account.png" alt=""/> My Account
+			</div>
+		</a>
 		<div id="sidebar">
 			<form>
 				<input type="search" name="search" placeholder="Search...">
 			</form>
-			<p><div class="button1">
-				<img src="lol/icon.png"> League of Legends
-			</div></p>
-			<p><div class="button1">
-				<img src="dota2/icon.png"> Dota 2
-			</div></p>
-			<p><div class="button1">
-				<img src="hearthstone/icon.png"> Hearthstone
-			</div></p>
-			<p><div class="button1">
-				<img src="csgo/icon.png"> CS:GO
-			</div></p>
-			<p><div class="button1">
-				<img src="overwatch/icon.png"> Overwatch
-			</div></p>
+			<div class="button1">
+				<img src="lol/icon.png" alt=""/> League of Legends
+			</div>
+			<div class="button1">
+				<img src="dota2/icon.png" alt=""/> Dota 2
+			</div>
+			<div class="button1">
+				<img src="hearthstone/icon.png" alt=""/> Hearthstone
+			</div>
+			<div class="button1">
+				<img src="csgo/icon.png" alt=""/> CS:GO
+			</div>
+			<div class="button1">
+				<img src="overwatch/icon.png" alt=""/> Overwatch
+			</div>
 		</div>
 		<div id="scrollable">
-			<p><div class="match1">
-				<img src="lol/teams/g2.png">
+			<div class="match1">
+				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
-				<img src="lol/teams/clg.png">
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/clg.png">
+				<img src="lol/teams/clg.png" alt=""/>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
-				<img src="lol/teams/g2.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/g2.png">
+				<img src="lol/teams/g2.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
-				<img src="lol/teams/clg.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/clg.png">
+				<img src="lol/teams/clg.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
-				<img src="lol/teams/g2.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/g2.png">
+				<img src="lol/teams/g2.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
-				<img src="lol/teams/clg.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/clg.png">
+				<img src="lol/teams/clg.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
-				<img src="lol/teams/g2.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/g2.png">
+				<img src="lol/teams/g2.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
-				<img src="lol/teams/clg.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/clg.png">
+				<img src="lol/teams/clg.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
-				<img src="lol/teams/g2.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/g2.png">
+				<img src="lol/teams/g2.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
-				<img src="lol/teams/clg.png">
-				<div class="button2">Bet</div>
-			</div></p>
-			<p><div class="match2">
-				<div class="button2">Bet</div>
-				<img src="lol/teams/clg.png">
+				<img src="lol/teams/clg.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2">Bet</div></a>
+				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
-				<img src="lol/teams/g2.png">
-				<div class="button2">Bet</div>
-			</div></p>
+				<img src="lol/teams/g2.png" alt=""/>
+				<a href="bet.html"><div class="button2">Bet</div></a>
+			</div>
 		</div>
 		<div id="footer">
-			Footer
+			<a href="http://validator.w3.org/check?uri=referer">
+				<img src="http://www.w3.org/Icons/valid-xhtml10-blue" alt="Valid XHTML 1.0!"/>
+			</a>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="¡CSS Válido!"/>
+			</a>
 		</div>
 	</body>
 </html>
