--- a/p1/mybets.html
+++ b/p1/mybets.html
@@ -48,14 +48,23 @@
 			</a>
 		</div>
 		<div id="scrollable">
-			<div class="option">
-				My Wallet
-			</div>
-			<a href="mybets.html">
-				<div class="option">
-					My Bets
+			<div class="category">Settled Matches</div>
+			<div class="match1">
+				<img src="lol/teams/g2.png" alt=""/>
+				G2 vs. CLG
+				<img src="lol/teams/clg.png" alt=""/>
+				<div class="button2">
+					<div class="money">1.000.000€</div>
 				</div>
-			</a>
+			</div>
+			<div class="category">Unsettled Matches</div>
+			<div class="match2">
+				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<img src="lol/teams/clg.png" alt=""/>
+				CLG vs. G2
+				<img src="lol/teams/g2.png" alt=""/>
+				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+			</div>
 		</div>
 		<div id="footer">
 			<a href="http://validator.w3.org/check?uri=referer">
