Menú desplegable decente

--- a/p1/index.html
+++ b/p1/index.html
@@ -12,7 +12,7 @@
 				BetaBet
 			</div>
 		</a>
-		<a href="account.html">
+		
 			<div id="dropdown">
 			<ul>
 				<li>
@@ -20,13 +20,15 @@
 						<img src="images/account.png" alt=""/> 
 						My Account
 						<ul>
-							<li>skdjaskdadasd</li>
+							<a href="account.html"><li>My Wallet</li></a>
+							<a href="mybets.html"><li>My Bets</li></a>
+
 						</ul>	
 					</div>
 				</li>
 			</ul>
 			</div>
-		</a>
+	
 		<div id="sidebar">
 			<form>
 				<input type="search" name="search" placeholder="Search...">
