--- a/p1/index.html
+++ b/p1/index.html
@@ -12,23 +12,21 @@
 				BetaBet
 			</div>
 		</a>
-		
-			<div id="dropdown">
+		<div id="dropdown">
 			<ul>
 				<li>
 					<div id="account">
 						<img src="images/account.png" alt=""/> 
 						My Account
 						<ul>
-							<a href="account.html"><li>My Wallet</li></a>
+							<a href="mywallet.html"><li>My Wallet</li></a>
 							<a href="mybets.html"><li>My Bets</li></a>
 
 						</ul>	
 					</div>
 				</li>
 			</ul>
-			</div>
-	
+		</div>
 		<div id="sidebar">
 			<form>
 				<input type="search" name="search" placeholder="Search...">
