--- a/p1/mybets.html
+++ b/p1/mybets.html
@@ -12,11 +12,21 @@
 				BetaBet
 			</div>
 		</a>
-		<a href="account.html">
-			<div id="account">
-				<img src="images/account.png" alt=""/> My Account
-			</div>
-		</a>
+		<div id="dropdown">
+			<ul>
+				<li>
+					<div id="account">
+						<img src="images/account.png" alt=""/> 
+						My Account
+						<ul>
+							<a href="mywallet.html"><li>My Wallet</li></a>
+							<a href="mybets.html"><li>My Bets</li></a>
+
+						</ul>	
+					</div>
+				</li>
+			</ul>
+		</div>
 		<div id="sidebar">
 			<form>
 				<input type="search" name="search" placeholder="Search...">
