--- a/p1/mybets.html
+++ b/p1/mybets.html
@@ -21,7 +21,7 @@
 						<ul>
 							<a href="mywallet.html"><li>My Wallet</li></a>
 							<a href="mybets.html"><li>My Bets</li></a>
-
+							<a href="#"><li>Exit</li></a>
 						</ul>	
 					</div>
 				</li>
