Tentative of first assignment.

--- a/p1/index.html
+++ b/p1/index.html
@@ -14,7 +14,7 @@
 		</a>
         <div class="dropdown">
             <button id="account">
-                <img src="images/account.png" alt=""/> 
+                <img src="images/account.png" alt=""/>
                 My Account
             </button>
             <div class="dropdown-content">
@@ -28,7 +28,7 @@
 				<input type="search" name="search" placeholder="Search...">
 			</form>
             <div class="dropdown2">
-                <button class="button1"><img src="images/category.png">MOBA</button>
+                <button class="button1"><img src="images/category.png" alt="">MOBA</button>
                 <div class="dropdown2-content">
                     <a href="index.html?filter=lol">
                         <img src="lol/icon.png" alt=""/> League of Legends
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="dropdown2">
-                <button class="button1"><img src="images/category.png">FPS</button>
+                <button class="button1"><img src="images/category.png" alt="">FPS</button>
                 <div class="dropdown2-content">
                     <a href="index.html?filter=csgo">
                         <img src="csgo/icon.png" alt=""/> CS:GO
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="dropdown2">
-                <button class="button1"><img src="images/category.png">Cards</button>
+                <button class="button1"><img src="images/category.png" alt="">Cards</button>
                 <div class="dropdown2-content">
                     <a href="index.html?filter=hearthstone">
                         <img src="hearthstone/icon.png" alt=""/> Hearthstone
@@ -70,67 +70,67 @@
 			</div>
 			<div class="category">Upcoming Matches</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=1&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
 				<img src="lol/teams/g2.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=1&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=2&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
 				<img src="lol/teams/clg.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=2&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=3&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
 				<img src="lol/teams/g2.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=3&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=4&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
 				<img src="lol/teams/clg.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=4&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=5&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
 				<img src="lol/teams/g2.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=5&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=6&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
 				<img src="lol/teams/clg.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=6&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=7&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
 				<img src="lol/teams/g2.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=7&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=8&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/g2.png" alt=""/>
 				G2 vs. CLG
 				<img src="lol/teams/clg.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=8&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 			<div class="match2">
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=9&team=left"><div class="button2"><div>Bet</div></div></a>
 				<img src="lol/teams/clg.png" alt=""/>
 				CLG vs. G2
 				<img src="lol/teams/g2.png" alt=""/>
-				<a href="bet.html"><div class="button2"><div>Bet</div></div></a>
+				<a href="bet.html?match=9&team=right"><div class="button2"><div>Bet</div></div></a>
 			</div>
 		</div>
 		<footer>
