--- a/p1/mywallet.html
+++ b/p1/mywallet.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-		<title>BetaBet - My Account</title>
+		<title>BetaBet</title>
 		<link rel="stylesheet" type="text/css" href="theme.css">
 	</head>
 	<body>
@@ -14,7 +14,7 @@
 		</a>
         <div class="dropdown">
             <button id="account">
-                <img src="images/account.png" alt=""/> 
+                <img src="images/account.png" alt=""/>
                 My Account
             </button>
             <div class="dropdown-content">
@@ -28,7 +28,7 @@
 				<input type="search" name="search" placeholder="Search...">
 			</form>
             <div class="dropdown2">
-                <button class="button1"><img src="images/category.png">MOBA</button>
+                <button class="button1"><img src="images/category.png" alt="">MOBA</button>
                 <div class="dropdown2-content">
                     <a href="index.html?filter=lol">
                         <img src="lol/icon.png" alt=""/> League of Legends
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="dropdown2">
-                <button class="button1"><img src="images/category.png">FPS</button>
+                <button class="button1"><img src="images/category.png" alt="">FPS</button>
                 <div class="dropdown2-content">
                     <a href="index.html?filter=csgo">
                         <img src="csgo/icon.png" alt=""/> CS:GO
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="dropdown2">
-                <button class="button1"><img src="images/category.png">Cards</button>
+                <button class="button1"><img src="images/category.png" alt="">Cards</button>
                 <div class="dropdown2-content">
                     <a href="index.html?filter=hearthstone">
                         <img src="hearthstone/icon.png" alt=""/> Hearthstone
@@ -62,14 +62,14 @@
             </div>
 		</div>
 		<div id="scrollable">
-			<div class="option">
-				My Wallet
-			</div>
-			<a href="mybets.html">
-				<div class="option">
-					My Bets
-				</div>
-			</a>
+            <div class="title">Current credit:</div>
+            <div class="category">1.000.000 €</div>
+            <div class="option">
+                Charge credit
+            </div>
+            <div class="option">
+                Withdraw credit
+            </div>
 		</div>
 		<footer>
 			<a href="http://validator.w3.org/check?uri=referer">
